--- a/lectur/lectur_app/templates/vista_actividades_comunidad.html
+++ b/lectur/lectur_app/templates/vista_actividades_comunidad.html
@@ -2,7 +2,7 @@
 
 <div class="col-md-12 seccion-actividad ">
 
-<div class="row boton-foro" style="background-color: rgba(243,247,248,1); color: rgb(53,53,76);">
+<div class="row boton-foro" style="">
 	
 	<div class="col-md-3 no-padding"><div class="imagen-actividad" style="background-image: url('{{taller.imagen.url}}')">
  </div>
@@ -11,10 +11,10 @@
  <div class="col-md-9 texto-par-dos " style="padding-bottom: 20px;">
 
 
- <strong>{{taller.nombre}}</strong> 
+ <h4 style="color:#99be16; font-family: Raleway; font-size: 26px;">{{taller.nombre}}</h4> 
  	
-<p style="padding-top:30px;"><strong>Fecha y hora:</strong> {{taller.fecha}} </p>
-<p><strong>Lugar:</strong> {{taller.lugar}} </p>
+<p style="padding-top:20px;"><strong>Fecha y hora:</strong> {{taller.fecha}} </p>
+
 <p><strong>Descripción de la actividad:</strong> <br> {{taller.descripcion}} </p>
 
 
