--- a/lectur/lectur_app/templates/vista_foro_comunidad.html
+++ b/lectur/lectur_app/templates/vista_foro_comunidad.html
@@ -21,8 +21,8 @@
 
 		<div class ="col-md-4"  style="padding-top: 44px; text-align: center;">
 			
-			<p style=" font-size:19px;"><strong> {{tema|cantidad_respuestas_tema}} </strong></p>
-			<p> comentarios </p>
+			<p style=" font-size:19px; color:#5865bf;"><strong> {{tema|cantidad_respuestas_tema}} </strong></p>
+			<p style=" color:#5865bf; "> comentarios </p>
 		</div>
 		
 
