--- a/lectur/lectur_app/templates/explora_comunidades.html
+++ b/lectur/lectur_app/templates/explora_comunidades.html
@@ -38,7 +38,7 @@
 			{% include "ventana_recompensa.html" with id=reto.slug reto=reto premios=premios %}
 
 			{%empty%}
-			¡¡¡Deja de ser un perdedor y unete a una comunidad!!!
+			Sin medallas
 			{%endfor%}
 
 		</div>    
