--- a/lectur/lectur_app/templates/vista_actividad.html
+++ b/lectur/lectur_app/templates/vista_actividad.html
@@ -3,7 +3,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">{{taller.nombre}}</h4>
+          <h4 class="modal-title" style="color:#99be16; font-family: Raleway; font-size: 26px;">{{taller.nombre}}</h4>
         </div>
         <div class="modal-body" style="padding-bottom: 0px; padding-top: 0px;">
 <div class="row">
