--- a/lectur/lectur_app/templates/vista_destacados_comunidad.html
+++ b/lectur/lectur_app/templates/vista_destacados_comunidad.html
@@ -8,7 +8,7 @@
 <div class="container">
 <div class="col-md-12 texto-medio">
 <br>
-<h1>
+<h1 style ="font-family:'Yantramanav'; color: black;">
 Destacados
 </h1></div>
 </div>
