--- a/lectur/lectur_app/templates/index.html
+++ b/lectur/lectur_app/templates/index.html
@@ -83,7 +83,7 @@
 <div style="position: absolute; top: 0px; border-style: solid; border-width: 40px; border-color: white rgba(0,0,0,0) rgba(0,0,0,0) rgba(0,0,0,0); width: 5%; left: 47.5%; padding: 0px; "> </div>
 
 
-<!--<div style="position: absolute; bottom: 0px; border-style: solid; border-width: 40px; border-color:  rgba(0,0,0,0) rgba(0,0,0,0) #f4f8f9 rgba(0,0,0,0) ; width: 5%; left: 47.5%; padding: 0px; "> </div> -->
+<div style="position: absolute; bottom: 0px; border-style: solid; border-width: 40px; border-color:  rgba(0,0,0,0) rgba(0,0,0,0) white rgba(0,0,0,0) ; width: 5%; left: 47.5%; padding: 0px; "> </div> 
 
 
 			<div><H1 class="texto-medio-indb" align="center"> EXPLORA, DESCUBRE, ENTÉRATE</H1></div>
@@ -186,47 +186,21 @@
 <br><br><br>
 				</div>-->
 
-		</div>
+	</div>
 
 
- 
-<!--
-<div class="container-fluid" style=" background-size: cover; background-image: url('{% static 'imagenes/parte-tres.jpg' %}'); ">
-
-				
-			<div><H1 class="texto-medio-ind" align="center"> ¡RECIBE RECOMPENSAS!</H1></div>
-
-				<hr class="linea"> </hr>
-
-<div class=" col-md-6 col-md-push-3 col-sm-12 texto-par-dos" align="center" style ="padding-bottom: 30px;">
-<p>Participa activamente de las actividades y discusiones de las comunidades que sigues para subir de rango y adquirir boniﬁcaciones redimibles en el mundo real.</p>
-<div class="imagen-computador" style="padding-top: 20px;"> 
-					<img  src='{% static 'imagenes/computador.png' %}''> 
-				</div>
-
-</div> </div>-->
-
-<!-- 
-<div class="col-md-5 col-xs-12 col-md-offset-1  col-xs-offset-0" >
-<div class="imagen-computador"> 
-					<img  src='{% static 'imagenes/computador.png' %}''> 
-				</div>
-</div> -->
-
-<div class="container-fluid" style=" background-color:black; ">
-		
-		
-			<!-- barra formulario -->
-			
-
-			<div class="content col-md-12" >
-
-				<div class=" col-md-1"  > </div>
-
-				<div class="camposTexto col-md-8"  >
 
 
-					<!-- texto introductorio -->
+
+
+<div class="container-fluid" style=" background-color:black; ">   
+
+
+
+
+<div class="row">
+<div class="container">
+	<!-- texto introductorio -->
 					<div  class="row col-xs-20 col-s-12 col-md-12 texto-par-dosb" "img-responsive center-block" >   
 						<br><br><p align= "left" class= "row col-xs-60 col-s-50 col-md-50 texto-medio-indb"> COMUNÍCATE CON NOSOTROS <br>
 
@@ -234,18 +208,9 @@
 
 						</p> 
 					</div><!-- Fin texto introductorio -->
-
-
-
-
-
-
-
-
-	<!-- espacio nombre -->
-	<div class="row">
-
 		<div class="col-xs-5 col-md-5 col-xs-12 col-sm-12 ">
+
+
 
 			<div class="row campo texto-par-dos">
 				<span ><b>Nombre: </b></span><br>
@@ -276,7 +241,7 @@
 			</div><!-- fin espacio mensaje -->
 
 			<!-- Boton enviar mensaje -->
-<div class="" style="margin-top: 15px; margin-bottom: 30px;" align="right">
+<div class="" style="margin-top: 15px; margin-bottom: 100px;" align="right">
 					<a href="" class="boton-actividad" >
 						
 						Enviar
@@ -289,21 +254,15 @@
 		</div>
 		<!-- final formulario mensaje -->
 	</div>
-
-
-
-
-
-
-
-
-
-
-
-				</div>
-
-			</div>
 	</div>
+
+
+
+</div>
+
+
+
+
 
 
 	</body>
