--- a/lectur/lectur_app/templates/perfil.html
+++ b/lectur/lectur_app/templates/perfil.html
@@ -1,8 +1,141 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
+<div class="container">
+<div class="col-md-12 texto-medio">
+		<br>
+		<h1>
+
+			<!--  	Mi perfil-->
+		</h1>
+	</div>
+<div class="row">
+	<div class="col-md-2 col-md-offset-3 col-xs-4" style="padding-top: 50px;" >
+
+		<div class="redondo" style= "height: 100%; padding-top: 100%; position: relative; background-position: center; background-size: cover; background-image: url('{{perfil.imagen.url}}');">
+			
+
+		</div>
+	</div>
+
+	<div class="col-md-4 col-xs-8" style="padding-top: 30px; " ><h1 style="color:#2d388a;">
+
+	{{perfil.user.first_name}} {{perfil.user.last_name}} </h1>
+		<p class="texto-par-dos" style="color:#2d388a;">{{perfil.user}}</p>	
+
+		<div><p class="texto-par-dos" style=" padding-top: 30px;">{{perfil.descripcion}}</p>	</div>	
+	</div>
+	</div> 
+
+	<div class="col-md-12"></div>
+	<div class="col-md-4 col-md-offset-4">
+	
+		<div class="container-fluid" style="padding-top: 50px; ">
 
 
+			{% for reto, premio in premios.items %}
+
+
+			{% include "ventana_recompensa.html" with id=reto.slug reto=reto premios=premios %}
+
+			{%empty%}
+			Este usuario aún no registra ninguna medalla
+			{%endfor%}
+
+		</div>     </div>
+
+
+
+<div class="col-md-12 texto-medio">
+				<br>
+				<h1 style="font-family:'Yantramanav'; color: black; ">
+					Comunidades a las que pertenece
+				</h1></div>
+
+<div class="col-md-12" align="center" style="padding-bottom: 50px; padding-top: 0px;">
+
+{% for c in comunidades %}
+{% include "comunidad_vista_min.html" with comunidad=c %}
+
+{% empty %}
+<h1>¡Aún no has ingresado a ninguna comunidad!</h1>
+{% endfor %}
+
+
+ </div>
+
+
+<div class="col-md-12 texto-medio">
+				<br>
+				<h1 style="font-family:'Yantramanav'; color: black; ">
+					Envíale un mensaje a 
+	{{perfil.user.first_name}}
+				</h1></div>
+
+
+
+
+
+<div class="row">
+
+		<div class="col-xs-5 col-md-5 col-xs-12 col-sm-12 ">
+
+			<div class="row campo texto-par-dos">
+				<span ><b>Nombre: </b></span><br>
+				<span><input   class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" type="text" size="30" maxlength="30" name="nombre" placeholder="Nombre"></span>
+			</div><!-- fin espacio nombre -->
+			<!-- espacio email -->
+			<div class="row campo texto-par-dos">
+				<span ><b>Email: </b></span><br>
+				<span><input type="text" class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" size="30" maxlength="30" name="email" placeholder="Email"></span>
+			</div><!-- fin espacio email -->
+
+			<!-- espacio asunto-->
+			<div class="row campo texto-par-dos">
+				<span ><b>Asunto: </b></span><br>
+				<span><input class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" type="text" size="30" maxlength="30" name="asunto" placeholder="Asunto" ></span>
+			</div><!-- fin espacio asunto -->
+		</div>
+
+
+
+
+		<div class="col-xs-6 col-md-6 col-xs-12 col-sm-12 col-xs-offset-1 col-md-offset-1 col-xs-offset-1 col-sm-offset-1">
+
+			<!-- espacio mensaje -->
+			<div class="row campo texto-par-dos">
+				<span  ><b>Mensaje: </b></span><br>
+				<span><textarea name="comentarios"  class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" rows="8" cols="32" placeholder="Mensaje"></textarea></span>
+			</div><!-- fin espacio mensaje -->
+
+			<!-- Boton enviar mensaje -->
+<div class="" style="margin-top: 15px; margin-bottom: 100px;" align="right">
+					<a href="" class="boton-actividad" >
+						
+						Enviar
+
+					</a>
+				</div>
+
+			<!-- fin espacio enviar mensaje -->
+
+		</div>
+		<!-- final formulario mensaje -->
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+		</div>
+<!--  	
+--------------
 <div class="col-md-6 col-md-offset-3 col-xs-12 col-xs-offset-0 texto-par-dos "  style="margin-top: 50px;">
 	
 	<div class="row">
@@ -24,13 +157,14 @@
 			{% for reto, premio in premios.items %}
 			{% include "ventana_recompensa.html" with id=reto.slug reto=reto premios=premios %}
 			{%empty%}
-			¡¡¡Deja de ser un perdedor y unete a una comunidad!!!
+			Aún no hay medallas
 			{%endfor%}
 
 		</div>    
 	
 		</div>
-	</div>
+	</div>	
+	
 
 <div class="row">
 	
@@ -65,6 +199,8 @@
 	<p>ENVIA UN MENSAJE</p>
 
 	<!-- espacio nombre -->
+	
+<!--
 	<div class="row">
 
 		<div class="col-xs-5 col-md-5 col-xs-12 col-sm-12 ">
@@ -72,18 +208,17 @@
 			<div class="row campo texto-par-dos">
 				<span ><b>Nombre: </b></span><br>
 				<span><input   class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" type="text" size="30" maxlength="30" name="nombre" placeholder="Nombre"></span>
-			</div><!-- fin espacio nombre -->
-			<!-- espacio email -->
+			</div>
 			<div class="row campo texto-par-dos">
 				<span ><b>Email: </b></span><br>
 				<span><input type="text" class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" size="30" maxlength="30" name="email" placeholder="Email"></span>
-			</div><!-- fin espacio email -->
+			</div>
 
-			<!-- espacio asunto-->
+			
 			<div class="row campo texto-par-dos">
 				<span ><b>Asunto: </b></span><br>
 				<span><input class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" type="text" size="30" maxlength="30" name="asunto" placeholder="Asunto" ></span>
-			</div><!-- fin espacio asunto -->
+			</div>
 		</div>
 
 
@@ -91,13 +226,13 @@
 
 		<div class="col-xs-6 col-md-6 col-xs-12 col-sm-12 col-xs-offset-1 col-md-offset-1 col-xs-offset-1 col-sm-offset-1">
 
-			<!-- espacio mensaje -->
+		
 			<div class="row campo texto-par-dos">
 				<span  ><b>Mensaje: </b></span><br>
 				<span><textarea name="comentarios"  class="col-xs-12 col-md-12 col-xs-12 col-sm-12 caja" rows="8" cols="32" placeholder="Mensaje"></textarea></span>
-			</div><!-- fin espacio mensaje -->
+			</div>
 
-			<!-- Boton enviar mensaje -->
+			
 <div class="" style="margin-top: 15px; margin-bottom: 30px;" align="right">
 					<a href="" class="boton-actividad" >
 						
@@ -106,14 +241,14 @@
 					</a>
 				</div>
 
-			<!-- fin espacio enviar mensaje -->
+			
 
 		</div>
-		<!-- final formulario mensaje -->
+		
 	</div>
 
 
-
+-->
 
 
 
