--- a/lectur/lectur_app/templates/explora_comunidades.html
+++ b/lectur/lectur_app/templates/explora_comunidades.html
@@ -12,23 +12,25 @@
 	</div>
 
 	{%if user and user.lector%}
-	<div class="col-md-3" style="padding-top: 50px;" >
-
+	<div class="row">
+	<div class="col-md-2 col-md-offset-3 col-xs-4" style="padding-top: 50px;" >
 
 		<div class="redondo" style= "height: 100%; padding-top: 100%; position: relative; background-position: center; background-size: cover; background-image: url('{{user.lector.imagen.url}}');"></div>
 	</div>
 
-	<div class="col-md-4" style="padding-top: 30px; " ><h1 style="color:#2d388a;">{{user.first_name}} {{user.last_name}} </h1>
+	<div class="col-md-4 col-xs-8" style="padding-top: 30px; " ><h1 style="color:#2d388a;">
+
+	{{user.first_name}} {{user.last_name}} </h1>
 		<p class="texto-par-dos" style="color:#2d388a;">{{user}}</p>	
 
 		<div><p class="texto-par-dos" style=" padding-top: 30px;">{{user.lector.descripcion}}</p>	</div>	
 	</div>
-
+	</div>
 
 	{%endif%}
-	<div class="col-md-4"></div>
-	<div class="col-md-5">
-
+	<div class="col-md-12"></div>
+	<div class="col-md-4 col-md-offset-4">
+	
 		<div class="container-fluid" style="padding-top: 50px; ">
 
 
@@ -54,7 +56,7 @@
 			<!-- inicio parte como subir de nivel -->
 			<div class="row" data-toggle="collapse" data-target="#demo">
 			<div class="col-md-8 col-md-offset-2" style="margin-top: 50px; border-color: #f18547; border-style:  solid none; border-width: 1px; ">
-			<p  style="padding-top: 5px; text-align: center;  font-size: 25px; font-family: 'Yantramanav', sans-serif; color: #e17537;">¿Quieres obtener medallas?</p>
+			<p  class="medalla-indica">¿Cómo subir de nivel?</p>
 
 
 			</div>
@@ -86,13 +88,13 @@
 				<h1 style="font-family:'Yantramanav'; color: black; ">
 					Comunidades a las que pertenezco
 				</h1></div>
-				<div class="col-md-12" align="center" style="padding-bottom: 50px; padding-top: 0px;">
+				<div class="col-md-12" align="center" style="padding-bottom: 30px; padding-top: 0px;">
 
 
 					{% for c in comunidades %}
 					{% include "comunidad_vista_min.html" with comunidad=c %}
 					{% empty %}
-					<h1 class="col-md-12 texto-par-dos" style="padding-top: 50px;">Aún no has ingresado a ninguna comunidad, te invito a <a href="/explora/">explorar </a> las comunidades que se encuentran registradas en Tulia.</h1>
+					<h1 class="col-md-12 texto-par-dos boton-new" style="padding-top: 20px; padding-bottom: 20px;">Aún no has ingresado a ninguna comunidad, te invito a <a href="/explora/">explorar </a> las comunidades que se encuentran registradas en Tulia.</h1>
 					{% endfor %}
 				</div>
 
@@ -102,13 +104,15 @@
 				<h1 style="font-family:'Yantramanav'; color: black; ">
 					Actividades a las que asistiré
 				</h1></div>
-				<div class="col-md-12"  style="padding-bottom: 50px; padding-top: 0px;">
+				<div class="col-md-12" align="center" style="padding-bottom: 50px; padding-top: 0px;">
 
 
 					{% for t in talleres %}
 						{% include "vista_actividades_comunidad.html" with taller=t %}
 					{% empty %}
-					<h1 class="col-md-12 texto-par-dos" style="padding-top: 50px;">Aún no te has registrado a ninguna actividad, te invito a <a href="/explora/">explorar </a> las comunidades para ver los talleres que ofrecen.</h1>
+
+
+					<h1 class="col-md-12 texto-par-dos boton-new" style="padding-top: 20px; padding-bottom: 20px;">Aún no te has registrado a ninguna actividad, te invito a <a href="/explora/">explorar </a> las comunidades para ver los talleres que ofrecen.</h1>
 					{% endfor %}
 				</div>
 
