--- a/lectur/lectur_app/templates/lector_vista_min.html
+++ b/lectur/lectur_app/templates/lector_vista_min.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<div class="col-md-2 contenedor-perfil">
+<div class="col-md-2 col-xs-6 contenedor-perfil">
 <a href="/perfil/{{lector.user.username}}" title ="{{lector.user.first_name}} {{lector.user.last_name}}" align="center">
 
 		<div class="redondo circulo-perfil-borde">
