--- a/lectur/lectur_app/templates/respuesta_foro.html
+++ b/lectur/lectur_app/templates/respuesta_foro.html
@@ -5,21 +5,26 @@
 <!-- parte respuesta -->	
 
 <div class="row boton-foro" style="background-color: white; padding: 0px; overflow: hidden;  {%if principal %} 
-margin-bottom: 50px;
+margin-bottom: 50px; 
 {%else%} 
-margin-bottom: 10px;
+margin-bottom: 10px; 
+{%endif%} 
+{%if not isRespuesta%}
+background-color: #f5f5f5;
 {%endif%} ">
 
 
 
-<div class="col-md-2" align="center" style="">
+<div class="col-md-2 col-md-offset-0 col-xs-6 col-xs-offset-3" align="center" style="">
 	<div class="redondo" style= "width: 80%; padding-top: 80%; margin-top: 20px; position: relative; background-position: center; background-size: cover; background-image: url('{{autor.imagen.url}}');"></div>
 	<spam> {{autor.user.first_name}} {{autor.user.last_name}} </spam><br>
 
 
 </div>
 
-<div class="col-md-10 texto-par-dos" style="margin-top: 0px; padding-top: 20px; padding-bottom: 0px; background-color: white;">
+<div class="col-md-10 col-xs-12 texto-par-dos" style="margin-top: 0px; padding-top: 20px; padding-bottom: 0px; background-color: white; {%if not isRespuesta%}
+background-color: #f5f5f5;
+{%endif%}">
 
 	<div class="row" style="min-height: 100px; padding-left: 15px; ">
 		<p><strong>Contenido:</strong> {{mensaje}} </p>
@@ -32,7 +37,7 @@ margin-bottom: 10px;
 </div>
 
 {%if isRespuesta%}
-{% if user and user.lector%}
+{% if user and user.lector and pertenece > 0 %}
 
 <div class ="row-fluid" style="clear: both; background-color: white; padding-bottom: 10px;" >
 	
