--- a/lectur/lectur_app/templates/ubicacion_comunidades.html
+++ b/lectur/lectur_app/templates/ubicacion_comunidades.html
@@ -2,6 +2,43 @@
 
 {% load staticfiles %}
 {% block content %}
+<div class="modal fade" id="modal_ventana_marcador" role="dialog">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header" >
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 id="modal_ventana_marcador_titulo" align="Center" class="modal-title" style="font-family: 'roboto'; font-weight: bolder;">
+          Ventana
+        </h4>
+      </div>
+      <div  id="modal_ventana_contenido" class="modal-body" style="padding:0px;overflow:hidden;" >
+        <div class="container-fluid">
+          <div class="row" style="margin-bottom:10px;">
+              <img id="modal_ventana_marcador_imagen" src="" alt="" style="width:100%;heigth:auto;">
+          </div>
+          <div class="row">
+            <div id="modal_ventana_marcador_contenido" class="col-md-12" align='center'>
+              Información
+            </div>
+          </div>
+        </div>
+
+        <div class="row" align="center" style="margin-top:10px;">
+          <a id="modal_ventana_marcador_comunidad" href="guias.html">
+          <div class="col-md-6 col-xs-6 col-md-offset-3 col-xs-offset-3  boton-paquete">
+            <i class="fa fa-book" ></i> <br>
+            <span>Ver Más</span>
+          </div>
+          </a>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
 <br>
 <div class="row" style="background: white;">
 
@@ -29,6 +66,9 @@
 
 </div>
 
+<h1 style ="font-family:'Yantramanav'; color: black; font-size: 25px; padding-top: 20px;">
+			Resultados de la búsqueda:
+		</h1>
 
 
 		{% for comu in comunidades %}
@@ -173,7 +213,10 @@ function crearEspaciosMapa(){
 		lat=parseFloat("{{esp.latitud}}".replace(",","."));
 		lon=parseFloat("{{esp.longitud}}".replace(",","."));
 		nom="{{esp.nombre}}"+" ("+"{{comu.nombre}}"+")";
-		var direccion=createMarker(lat, lon,nom);
+		img="{{comu.imagen.url}}";
+		conte="{{esp.descripcion}}";
+		url="/comunidades/{{comu.slug}}/informacion"
+		var direccion=createMarkerComunidad(lat, lon,nom, conte, img, url);
 
 		//alert("{{esp.latitud}}, {{esp.longitud}}"+"{{esp.nombre}}"+" ("+"{{comu.nombre}}"+")"+"__\n__"+lat+" ___ "+lon+" ___ "+nom)
 		
@@ -248,6 +291,18 @@ function crearEspaciosMapa(){
 			mostrarComunidades(k, true);	
 		}
 	}
+
+
+	function mostrarVentanaMarcador(titulo, contenido, urlimagen, urlcomunidad){
+$("#modal_ventana_marcador_titulo").html(titulo);
+$("#modal_ventana_marcador_contenido").html(contenido);
+$("#modal_ventana_marcador_imagen").attr("src", urlimagen);
+$("#modal_ventana_marcador_comunidad").attr("href", urlcomunidad);
+
+$("#modal_ventana_marcador").modal();
+	}
+
+
 
 </script>
 {% endblock content %}
