--- a/lectur/lectur_app/templates/vista_informacion_comunidad.html
+++ b/lectur/lectur_app/templates/vista_informacion_comunidad.html
@@ -1,21 +1,74 @@
 {% load staticfiles %}
 
 <div class="col-md-8 col-md-offset-2 col-xs-12 col-xs-offset-0 texto-par-dos ">
+<!--
 	<div class="row">
-		<div class="comunidad-fondo" style="position: relative; background-image: url('{{comunidad.imagen.url}}');"></div>
-	</div>
+		<div class="comunidad-fondo" style="position: relative; /*background-image: url('{{comunidad.imagen.url}}');*/"></div>
+	</div>-->
 
 	<div class="row">
 		<div class="col-md-12">
-			<h1>¿Quiénes Somos?</h1>
+			<h1 >Sobre nosotros</h1>
 			<p>{{comunidad.descripcion}} </p>
 		</div>
 	</div>
 
+	 <div id="rev_slider_1_1" class="rev_slider fullscreenbanner revslider-initialised tp-simpleresponsive" style="max-height: none; margin-top: 0px; margin-bottom: 0px; height: 100%;" data-version="5.2.6" data-slideactive="rs-2">
+      
+{% if comunidad.album_fotos %}
+
+
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+
+{%for foto in comunidad.album_fotos.all %}
+<li data-target="#myCarousel" data-slide-to="{{forloop.counter0}}" {% ifequal forloop.counter0 0 %} class="active" {%endifequal%} ></li>
+      
+{%endfor%}
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+
+
+{%for foto in comunidad.album_fotos.all %}
+<li data-target="#myCarousel" data-slide-to="{{forloop.counter0}}"  style="list-style: none;"></li>
+      <div class="item {% ifequal forloop.counter0 0 %} active {%endifequal%} ">
+        <div class="comunidad-fondo" style="position: relative; width:100%; height: 250px; background-position: center; background-size: cover;  background-image: url('{{foto.foto.url}}'); ">
+
+        <div style="position: absolute; top: 0px; width:  100%; background-color: rgba(0,0,0,0.5); color: white;" align="center"> <h2>{{foto.titulo}}</h4> </div>
+      </div>
+      </div>      
+{%endfor%}
+
+
+
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+{%endif%}
+
+
+
+   
+  </div>
+  
+
 	<div class="row">
 		<div class="col-md-12">
 
-			<p>CONTACTO</p>
+			<p>ESCRÍBENOS</p>
 		</div>
 
 		<div class="row">
@@ -24,7 +77,7 @@
 			</div>
 
 			<div class="col-md-4 col-xs-12">
-				<span>Correo electrónico: <br> tina-hoyos@hotmail.com</span>
+				<span>Correo electrónico: <br> comun_lec@hotmail.com</span>
 
 			</div>
 
