--- a/lectur/lectur_app/templates/vista_tema_foro.html
+++ b/lectur/lectur_app/templates/vista_tema_foro.html
@@ -41,6 +41,7 @@
 	{% endfor %}
 </div>
 
+{% if user and user.lector and pertenece > 0 %}
 
 <div class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0 texto-par-dos "  style="margin-top: 20px; ">
 
@@ -69,6 +70,7 @@
 
 
 </div>
+{% endif %}	
 
 
 
